# DGtal-Tutorials-DGMM2022

./: CLI11.hpp  CMakeLists.txt  README.md  appveyor.yml  exampleBoard2D.cpp  examplePolyscope.cpp  helloworld.cpp  windowsDGtalInstall.md  windowsNotes.md
cmake/: dgtal.cmake
practical-2D-estimation/: 2D-estimation-template.cpp
practical-2D-estimation/answers/: 2D-estimation.cpp
practical-3D-estimation/: 3D-estimation-template.cpp  3D-estimation-template.cpp~
practical-3D-estimation/answers/: 3D-estimation.cpp
practical-homotopic-thinning/: homotopic-thinning.cpp
practical-homotopic-thinning/answers/: homotopic-thinning.cpp
practical-scaleaxis/: scaleaxis.cpp
practical-scaleaxis/answers/: scaleaxis.cpp
